# ToDoList_Project

./: .gitignore  CMakeLists.txt  README.md  listmodel_manager.cpp  listmodel_manager.h  main.cpp  main.qml
Src/appBar/: AppBar.qml
Src/bottomBar/: BottomBar.qml
Src/progressSection/: ProgressSection.qml
Src/taskInputPanel/: TaskInputPanel.qml
Src/taskItem/: TaskItem.qml
Src/taskListview/: TaskListView.qml
